# Secure_message_app

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/client/: gui.py  network.py
src/common/: crypto_utils.py  protocol.py
src/server/: database.py  server_main.py
tests/: conftest.py  test_crypto.py  test_database.py  test_gui.py  test_network.py  test_protocol.py  test_server_main.py
